finished all categories methods
