# src/controllers/categories/index.controller.ts
@@ -80,9 +80,113 @@ const create_category = async (
   }
 };
 
+/**
+ * @description Delete a category
+ * @param request
+ * @param response
+ */
+const delete_category = async (
+  request: Request,
+  response: Response,
+): Promise<Response> => {
+  try {
+    const { id } = request.params;
+
+    if (!id) {
+      return response.status(400).json({
+        code: '400',
+        message: 'Required params are missing.',
+      });
+    }
+
+    const category = await categories_repository.get_category_by_id({
+      id: Number(id),
+    });
+
+    if (!category) {
+      return response.status(400).json({
+        code: '404',
+        message: 'Category not found',
+      });
+    }
+
+    await categories_repository.delete_category({
+      id: Number(id),
+    });
+
+    return response.status(204).json({
+      category: category,
+    });
+  } catch (error) {
+    logger.error(error);
+    logger.error('Error at "delete_category" method');
+
+    return response.status(500).json({
+      code: '500',
+      message: 'Internal server error',
+    });
+  }
+};
+
+/**
+ * @description Create a new category
+ * @param request
+ * @param response
+ */
+const update_category = async (
+  request: Request,
+  response: Response,
+): Promise<Response> => {
+  try {
+    const { name, color } = request.body;
+    const { id } = request.params;
+
+    if (!id || !name || !color || !is_hex_color(color)) {
+      return response.status(400).json({
+        code: '400',
+        message: 'Required params are missing.',
+      });
+    }
+
+    const category = await categories_repository.get_category_by_id({
+      id: Number(id),
+    });
+
+    if (!category) {
+      return response.status(400).json({
+        code: '404',
+        message: 'Category not found',
+      });
+    }
+
+    category.category_name = name;
+    category.category_color = color;
+
+    await categories_repository.update_category({
+      id: Number(id),
+      name,
+      color,
+    });
+
+    return response.status(201).json({
+      category: category,
+    });
+  } catch (error) {
+    logger.error(error);
+    logger.error('Error at "update_category" method');
+
+    return response.status(500).json({
+      code: '500',
+      message: 'Internal server error',
+    });
+  }
+};
+
 const categories_controller = {
   get_all_categories,
   create_category,
+  delete_category,
+  update_category,
 };
 
 export { categories_controller };
